# search

./: .env  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.travis/: smoke-test.sh
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  settings.dev.py  settings.test.py  uwsgi.ini
docker/nginx/: default.conf
schemas/: item-list.xsd
search/: __init__.py  errors.py  exceptions.py  index.py  ping.py  populate.py  requests.py  search.py  settings.py  utils.py  wsgi.py
tests/: conftest.py  schema_utils.py  test_errors.py  test_index.py  test_ping.py  test_populate.py  test_requests.py  test_schema_utils.py  test_search.py  test_utils.py
tests/assets/: __init__.py  scholarly-articles-article1-response.xml  scholarly-articles-items-response.xml
