[tool.poetry]
name = "search"
version = "0.1.0"
description = "Libero search service"
authors = [""]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
lxml = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
ipdb = "^0.11.0"
flake8 = "^3.6"
flake8-isort = "^2.6"
pylint = "^2.2"
mypy = "^0.660.0"
libero-schemas = {git = "https://github.com/libero/schemas.git"}
pytest-mock = "^1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
