[tool.poetry]
name = "search"
version = "0.1.0"
description = "Libero search service"
authors = [""]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
lxml = "^4.3"
uwsgi = "^2.0"
elasticsearch = "^6.3"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
flake8 = "^3.6"
flake8-isort = "^2.6"
pylint = "^2.2"
mypy = "^0.660.0"
requests-mock = "^1.5"
pytest-mock = "^1.10"
pytest-socket = "^0.3.3"
pdbpp = "^0.10.0"
pytest-clarity = {version = "^0.1.0-alpha.1",allows-prereleases = true}
libero-schemas = {git = "https://github.com/libero/schemas.git"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
